--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>花酒会</p>
                 <p>FLORA WINE STYLE</p>
             </a>
-            <a href="javascript:;" class="menu_shopping">
+            <a href="./shop.html" class="menu_shopping">
                 <p>商城</p>
                 <p>Shopping</p>
             </a>
@@ -49,7 +49,7 @@
 
 </body>
 
-<script src="./js/jquery.min.js"></script>
+<script src="./lib/jQuery-1.9.1/jquery.min.js"></script>
 <script src="./js/index.js"></script>
 <!------分------割------线------>
 </html>
