--- a/shopList.html
+++ b/shopList.html
@@ -14,8 +14,7 @@
     <meta content="white" name="apple-mobile-web-app-status-bar-style">
     <!-- 优先使用 IE 最新版本和 Chrome -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>商城</title>
-    <link rel="stylesheet" type="text/css" href="./lib/swiper-3.4.2/swiper-3.4.2.min.css">
+    <title>酒品</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="./js/response.js"></script>
 
@@ -26,43 +25,42 @@
     <!-- 头部导航 -->
     <div class="nav">
         <span class="go_back"></span>
-        <p>商城</p>
+        <p>酒品</p>
+        <a href="javasctipt:;" class="nav_search"></a>
     </div>
     <!-- 商城列表 -->
     <div class="shop_list">
-        <!-- 搜索框 -->
-        <div class="search">
-            <input type="text" placeholder="搜索">
-            <img src="./img/search.png" alt="搜索">
+        <div class="classify_nav">
+            <a href="javasctipt:;">红葡萄酒</a>
+            <a href="javasctipt:;">白葡萄酒</a>
+            <a href="javasctipt:;">桃红葡萄酒</a>
         </div>
-        <!-- 轮播图 -->
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./img/shop_list_01.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./img/shop_list_01.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./img/shop_list_01.jpg" alt=""></div>
-            </div>
-            <div class="swiper-pagination"></div>
-        </div>
-        <!-- 商品分类 -->
-        <div class="classify">
-            <a href="./shopList.html" class="class_wine">
-                <div>
-                    <p>红酒区</p>
-                    <p>wine</p>
-                </div>            
-            </a>
-            <a href="./shopList.html" class="class_tools">
-                <div>
-                    <p>酒具区</p>
-                    <p>tools</p>
-                </div>
-            </a>
-        </div>
-        <!-- 分割标题 -->
-        <p>更多人的选择</p>
         <!-- 产品列表 -->
         <div class="product_list">
+            <div class="product">
+                <img src="./img/shop_list_product.jpg" alt="product">
+                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                <div class="product_intro">
+                    <p><span>法国原产</span><span>干型</span></p>
+                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="./img/shop_list_product.jpg" alt="product">
+                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                <div class="product_intro">
+                    <p><span>法国原产</span><span>干型</span></p>
+                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="./img/shop_list_product.jpg" alt="product">
+                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                <div class="product_intro">
+                    <p><span>法国原产</span><span>干型</span></p>
+                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                </div>
+            </div>
             <div class="product">
                 <img src="./img/shop_list_product.jpg" alt="product">
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
@@ -107,7 +105,6 @@
 </body>
 
 <script src="./lib/jQuery-1.9.1/jquery.min.js"></script>
-<script src="./lib/swiper-3.4.2/swiper-3.4.2.jquery.min.js"></script>
 <script src="./js/index.js"></script>
 <!------分------割------线------>
 </html>
