--- a/shop.html
+++ b/shop.html
@@ -38,9 +38,9 @@
         <!-- 轮播图 -->
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./img/shop_list_01.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./img/shop_list_01.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./img/shop_list_01.jpg" alt=""></div>
+                <div class="swiper-slide"><a href="javasctipt:;"><img src="./img/shop_list_01.jpg" alt=""></a></div>
+                <div class="swiper-slide"><a href="javasctipt:;"><img src="./img/shop_list_01.jpg" alt=""></a></div>
+                <div class="swiper-slide"><a href="javasctipt:;"><img src="./img/shop_list_01.jpg" alt=""></a></div>
             </div>
             <div class="swiper-pagination"></div>
         </div>
@@ -64,42 +64,50 @@
         <!-- 产品列表 -->
         <div class="product_list">
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
 
     <div class="nav_list">
-        <a href="javasctipt:;">首页</a>
+        <a href="./index.html" class="active">首页</a>
         <a href="javasctipt:;">购物车</a>
         <a href="javasctipt:;">我的</a>
     </div>
