--- a/shopList.html
+++ b/shopList.html
@@ -15,6 +15,7 @@
     <!-- 优先使用 IE 最新版本和 Chrome -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>酒品</title>
+    <link rel="stylesheet" type="text/css" href="./lib/swiper-3.4.2/swiper-3.4.2.min.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="./js/response.js"></script>
 
@@ -31,73 +32,87 @@
     <!-- 商城列表 -->
     <div class="shop_list">
         <div class="classify_nav">
-            <a href="javasctipt:;">红葡萄酒</a>
+            <a href="javasctipt:;" class="active">红葡萄酒</a>
             <a href="javasctipt:;">白葡萄酒</a>
             <a href="javasctipt:;">桃红葡萄酒</a>
         </div>
         <!-- 产品列表 -->
         <div class="product_list">
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
             <div class="product">
-                <img src="./img/shop_list_product.jpg" alt="product">
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
-                </div>
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <div class="product_intro">
+                        <p class="tab"><span>法国原产</span><span>干型</span></p>
+                        <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
 
     <div class="nav_list">
-        <a href="javasctipt:;">首页</a>
+        <a href="./index.html" class="active">首页</a>
         <a href="javasctipt:;">购物车</a>
         <a href="javasctipt:;">我的</a>
     </div>
@@ -105,6 +120,7 @@
 </body>
 
 <script src="./lib/jQuery-1.9.1/jquery.min.js"></script>
+<script src="./lib/swiper-3.4.2/swiper-3.4.2.jquery.min.js"></script>
 <script src="./js/index.js"></script>
 <!------分------割------线------>
 </html>
