--- a/shop.html
+++ b/shop.html
@@ -108,7 +108,7 @@
 
     <div class="nav_list">
         <a href="./index.html" class="active">首页</a>
-        <a href="javasctipt:;">购物车</a>
+        <a href="./shoppingCart.html">购物车</a>
         <a href="javasctipt:;">我的</a>
     </div>
 
