--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -31,18 +31,6 @@
 
     <div class="shopping_cart">
         <div class="cart_item">
-            <a href="javasctipt:;" class="selection selected"></a>
-            <img src="./img/shop_list_product.jpg" alt="product">
-            <div>
-                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
-                <div class="product_intro">
-                    <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>￥<span class="price">456</span>/瓶</p>
-                    <p>小计：￥<span class="sum">456</span>数量：<span class="sub">-</span><span class="num">1</span><span class="add">+</span></p>
-                </div>
-            </div>
-        </div>
-        <div class="cart_item">
             <a href="javasctipt:;" class="selection"></a>
             <img src="./img/shop_list_product.jpg" alt="product">
             <div>
@@ -65,6 +53,32 @@
                     <p>小计：￥<span class="sum">456</span>数量：<span class="sub">-</span><span class="num">1</span><span class="add">+</span></p>
                 </div>
             </div>
+        </div>
+        <div class="cart_item">
+            <a href="javasctipt:;" class="selection"></a>
+            <img src="./img/shop_list_product.jpg" alt="product">
+            <div>
+                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                <div class="product_intro">
+                    <p class="tab"><span>法国原产</span><span>干型</span></p>
+                    <p>￥<span class="price">456</span>/瓶</p>
+                    <p>小计：￥<span class="sum">456</span>数量：<span class="sub">-</span><span class="num">1</span><span class="add">+</span></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="sum_price">
+        <div>
+            <a href="javasctipt:;" class="selection"></a>
+            全选
+        </div>
+        <div>
+            合计：￥
+            <span class="heji">0</span>
+        </div>
+        <div>
+            <a href="javasctipt:;">去结算</a>
         </div>
     </div>
 
