--- a/payment.html
+++ b/payment.html
@@ -26,59 +26,57 @@
 
     <!-- 头部导航 -->
     <div class="nav">
-        <p>购物车<a href="javasctipt:;" class="delete">删除</a></p>
+        <span class="go_back"></span>
+        <p>结算</p>
     </div>
 
-    <div class="shopping_cart">
+    <div class="address_view"><span class="icon_position"></span>北京市西城区广安门内大街1号</div>
+
+    <div class="payment">
         <div class="cart_item">
-            <a href="javasctipt:;" class="selection"></a>
             <img src="./img/shop_list_product.jpg" alt="product">
             <div>
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
                     <p>￥<span class="price">456</span>/瓶</p>
-                    <p>小计：￥<span class="sum">456</span>数量：<span class="sub">-</span><span class="num">1</span><span class="add">+</span></p>
+                    <p><span class="sum">小计：￥456</span><span class="count">数量：1</span></p>
                 </div>
             </div>
         </div>
         <div class="cart_item">
-            <a href="javasctipt:;" class="selection"></a>
             <img src="./img/shop_list_product.jpg" alt="product">
             <div>
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
                     <p>￥<span class="price">456</span>/瓶</p>
-                    <p>小计：￥<span class="sum">456</span>数量：<span class="sub">-</span><span class="num">1</span><span class="add">+</span></p>
+                    <p><span class="sum">小计：￥456</span><span class="count">数量：1</span></p>
                 </div>
             </div>
         </div>
         <div class="cart_item">
-            <a href="javasctipt:;" class="selection"></a>
             <img src="./img/shop_list_product.jpg" alt="product">
             <div>
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
                     <p>￥<span class="price">456</span>/瓶</p>
-                    <p>小计：￥<span class="sum">456</span>数量：<span class="sub">-</span><span class="num">1</span><span class="add">+</span></p>
+                    <p><span class="sum">小计：￥456</span><span class="count">数量：1</span></p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="sum_price">
+    <div class="invoice"><span>发票</span><span><a href="javasctipt:;">不开发票 ></a></span></div>
+
+    <div class="sum_pay">
         <div>
-            <a href="javasctipt:;" class="selection"></a>
-            全选
+            应付：￥
+            <span class="heji">1368</span>
         </div>
         <div>
-            合计：￥
-            <span class="heji">0</span>
-        </div>
-        <div>
-            <a href="./payment.html">去结算</a>
+            <a href="javasctipt:;">结算</a>
         </div>
     </div>
 
