--- a/v2/index.html
+++ b/v2/index.html
@@ -15,7 +15,7 @@
     <!-- 优先使用 IE 最新版本和 Chrome -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>首页</title>
-    <link rel="stylesheet" type="text/css" href="./lib/swiper-3.4.2/swiper-3.4.2.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./lib/swiper-3.4.2/swiper-3.4.2.min.css"> -->
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="./js/response.js"></script>
 
@@ -26,12 +26,8 @@
 
     <div class="container">
         <img src="./img/LOGO.png" alt="LOGO">
-        <p class="index_intro">Yet my heart is sweet with the memory of the first fresh jasmines that filled my hands when I was a child</p>
         <div class="menu_body">
-            <a class="menu_title">
-                <p>花酒会</p>
-                <p>FLORA WINE STYLE</p>
-            </a>
+            <p class="menu_title">花酒会</p>
             <a href="./shop.html" class="menu_shopping">
                 <p>商城</p>
                 <p>Shopping</p>
@@ -50,7 +46,7 @@
 </body>
 
 <script src="./lib/jQuery-1.9.1/jquery.min.js"></script>
-<script src="./lib/swiper-3.4.2/swiper-3.4.2.jquery.min.js"></script>
-<script src="./js/index.js"></script>
+<!-- <script src="./lib/swiper-3.4.2/swiper-3.4.2.jquery.min.js"></script> -->
+<!-- <script src="./js/index.js"></script> -->
 <!------分------割------线------>
 </html>
