--- a/v2/addrManage.html
+++ b/v2/addrManage.html
@@ -14,7 +14,8 @@
     <meta content="white" name="apple-mobile-web-app-status-bar-style">
     <!-- 优先使用 IE 最新版本和 Chrome -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>首页</title>
+    <title>地址管理</title>
+    <link rel="stylesheet" type="text/css" href="./lib/swiper-3.4.2/swiper-3.4.2.min.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="./js/response.js"></script>
 
@@ -23,27 +24,26 @@
 
 <body>
 
-    <div class="container">
-        <img src="./img/LOGO.png" alt="LOGO">
-        <div class="menu_body">
-            <p class="menu_title">花酒会</p>
-            <a href="./shop.html" class="menu_shopping">
-                <p>商城</p>
-                <p>Shopping</p>
-            </a>
-            <a href="javascript:;" class="menu_aboutus">
-                <p>了解花酒会</p>
-                <p>About us</p>
-            </a>
-            <a href="javascript:;" class="menu_more">
-                <p>更多</p>
-                <p>More</p>
-            </a>
-        </div>
+    <!-- 头部导航 -->
+    <div class="nav">
+        <span class="go_back"></span>
+        <p>地址管理</p>
+    </div>
+
+    <div class="payment">
+        
+    </div>
+
+    <div class="nav_list">
+        <a href="./index.html">首页</a>
+        <a href="./shoppingCart.html" class="active">购物车<span class="cart_info">1</span></a>
+        <a href="javasctipt:;">我的</a>
     </div>
 
 </body>
 
 <script src="./lib/jQuery-1.9.1/jquery.min.js"></script>
+<script src="./lib/swiper-3.4.2/swiper-3.4.2.jquery.min.js"></script>
+<script src="./js/index.js"></script>
 <!------分------割------线------>
 </html>
