--- a/v2/addrManage.html
+++ b/v2/addrManage.html
@@ -15,7 +15,6 @@
     <!-- 优先使用 IE 最新版本和 Chrome -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>地址管理</title>
-    <link rel="stylesheet" type="text/css" href="./lib/swiper-3.4.2/swiper-3.4.2.min.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="./js/response.js"></script>
 
@@ -30,20 +29,31 @@
         <p>地址管理</p>
     </div>
 
-    <div class="payment">
-        
+    <div class="addr_manage">
+        <div>
+            <span>地&nbsp;&nbsp;&nbsp;&nbsp;址</span>
+            <span><input type="text" placeholder="请输入寄送地址"></span>
+        </div>
+        <div>
+            <span>联系人</span>
+            <span><input type="text" placeholder="请输入寄送联系人"></span>
+        </div>
+        <div>
+            <span>电&nbsp;&nbsp;&nbsp;&nbsp;话</span>
+            <span><input type="text" placeholder="请输入联系人电话" onkeyup="value=value.replace(/[^\d]/g, '')"></span>
+        </div>
+        <button>保存</button>
     </div>
 
     <div class="nav_list">
         <a href="./index.html">首页</a>
-        <a href="./shoppingCart.html" class="active">购物车<span class="cart_info">1</span></a>
-        <a href="javasctipt:;">我的</a>
+        <a href="./shoppingCart.html">购物车<span class="cart_info">1</span></a>
+        <a href="javasctipt:;" class="active">我的</a>
     </div>
 
 </body>
 
 <script src="./lib/jQuery-1.9.1/jquery.min.js"></script>
-<script src="./lib/swiper-3.4.2/swiper-3.4.2.jquery.min.js"></script>
 <script src="./js/index.js"></script>
 <!------分------割------线------>
 </html>
