--- a/v2/mine.html
+++ b/v2/mine.html
@@ -14,7 +14,7 @@
     <meta content="white" name="apple-mobile-web-app-status-bar-style">
     <!-- 优先使用 IE 最新版本和 Chrome -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>首页</title>
+    <title>我的</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="./js/response.js"></script>
 
@@ -23,27 +23,37 @@
 
 <body>
 
-    <div class="container">
-        <img src="./img/LOGO.png" alt="LOGO">
-        <div class="menu_body">
-            <p class="menu_title">花酒会</p>
-            <a href="./shop.html" class="menu_shopping">
-                <p>商城</p>
-                <p>Shopping</p>
-            </a>
-            <a href="javascript:;" class="menu_aboutus">
-                <p>了解花酒会</p>
-                <p>About us</p>
-            </a>
-            <a href="javaipt:;" class="menu_more">
-                <p>更多</p>
-                <p>More</p>
-            </a>
+    <!-- 头部导航 -->
+    <div class="nav">
+        <p>我的</p>
+    </div>
+
+    <div class="my_info">
+        <div class="information">
+            <img src="./img/avatar.png" alt="avatar">
+            <p class="my_name">Trump</p>
+            <p>186****6066</p>
+            <a class="setting" href="javascript:;"></a>
         </div>
+        <div class="address">
+            <span>地址管理</span>
+            <span>北京市西城区广安门内大街1号602北京市西城区广安门内大街1号602北京市西城区广安门内大街1号602</span>
+        </div>
+        <div class="order">
+            <span>我的订单</span>
+            <span>&gt;</span>
+        </div>
+    </div>
+
+    <div class="nav_list">
+        <a href="./index.html">首页</a>
+        <a href="./shoppingCart.html">购物车<span class="cart_info">1</span></a>
+        <a href="javasctipt:;" class="active">我的</a>
     </div>
 
 </body>
 
 <script src="./lib/jQuery-1.9.1/jquery.min.js"></script>
+<script src="./js/index.js"></script>
 <!------分------割------线------>
 </html>
