--- a/v2/myInfo.html
+++ b/v2/myInfo.html
@@ -14,7 +14,7 @@
     <meta content="white" name="apple-mobile-web-app-status-bar-style">
     <!-- 优先使用 IE 最新版本和 Chrome -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>首页</title>
+    <title>我的信息</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="./js/response.js"></script>
 
@@ -23,27 +23,42 @@
 
 <body>
 
-    <div class="container">
-        <img src="./img/LOGO.png" alt="LOGO">
-        <div class="menu_body">
-            <p class="menu_title">花酒会</p>
-            <a href="./shop.html" class="menu_shopping">
-                <p>商城</p>
-                <p>Shopping</p>
-            </a>
-            <a href="javascript:;" class="menu_aboutus">
-                <p>了解花酒会</p>
-                <p>About us</p>
-            </a>
-            <a href="javaipt:;" class="menu_more">
-                <p>更多</p>
-                <p>More</p>
-            </a>
+    <!-- 头部导航 -->
+    <div class="nav">
+        <span class="go_back"></span>
+        <p>我的信息</p>
+    </div>
+
+    <div class="my_intro">
+        <div class="avatar">
+            <span>头像</span>
+            <span><img src="./img/avatar.png" alt="avatar"></span>
         </div>
+        <div class="phone">
+            <span>电话</span>
+            <span>186****6066</span>
+        </div>
+        <div class="nickname">
+            <span>昵称</span>
+            <span>Trump</span>
+        </div>
+        <div class="sex">
+            <span>性别</span>
+            <span>男</span>
+        </div>
+        <div class="approach_2nd">关于我们</div>
+        <div class="approach_1st">问题反馈</div>
+    </div>
+
+    <div class="nav_list">
+        <a href="./index.html">首页</a>
+        <a href="./shoppingCart.html">购物车<span class="cart_info">1</span></a>
+        <a href="javasctipt:;" class="active">我的</a>
     </div>
 
 </body>
 
 <script src="./lib/jQuery-1.9.1/jquery.min.js"></script>
+<script src="./js/index.js"></script>
 <!------分------割------线------>
 </html>
