--- a/v2/orderDetails.html
+++ b/v2/orderDetails.html
@@ -14,8 +14,7 @@
     <meta content="white" name="apple-mobile-web-app-status-bar-style">
     <!-- 优先使用 IE 最新版本和 Chrome -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>结算</title>
-    <link rel="stylesheet" type="text/css" href="./lib/swiper-3.4.2/swiper-3.4.2.min.css">
+    <title>订单详情</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="./js/response.js"></script>
 
@@ -27,10 +26,21 @@
     <!-- 头部导航 -->
     <div class="nav">
         <span class="go_back"></span>
-        <p>结算</p>
+        <p>订单详情</p>
     </div>
 
-    <div class="address_view"><span class="icon_position"></span>北京市西城区广安门内大街1号北京市西城区广安门内大街1号北京市西城区广安门内大街1号<span class="icon_next">&gt;</span></div>
+    <div class="order_state top">
+        <span>订单状态：</span>
+        <span>已支付</span>
+    </div>
+
+    <div class="order_state bottom">
+        <span>收件地址：</span>
+        <span>
+            <span>北京市西城区广安门内大街1号 602</span>
+            <span>川普 186****0000</span>
+        </span>
+    </div>
 
     <div class="payment">
         <div class="cart_item">
@@ -39,7 +49,7 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456</span>&frasl;瓶</p>
+                    <p>&yen;<span class="price">456</span>/瓶</p>
                     <p><span class="sum">小计：&yen;456</span><span class="count">数量：1</span></p>
                 </div>
             </div>
@@ -50,7 +60,7 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456</span>&frasl;瓶</p>
+                    <p>&yen;<span class="price">456</span>/瓶</p>
                     <p><span class="sum">小计：&yen;456</span><span class="count">数量：1</span></p>
                 </div>
             </div>
@@ -61,7 +71,7 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456</span>&frasl;瓶</p>
+                    <p>&yen;<span class="price">456</span>/瓶</p>
                     <p><span class="sum">小计：&yen;456</span><span class="count">数量：1</span></p>
                 </div>
             </div>
@@ -72,7 +82,7 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456</span>&frasl;瓶</p>
+                    <p>&yen;<span class="price">456</span>/瓶</p>
                     <p><span class="sum">小计：&yen;456</span><span class="count">数量：1</span></p>
                 </div>
             </div>
@@ -83,33 +93,22 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456</span>&frasl;瓶</p>
+                    <p>&yen;<span class="price">456</span>/瓶</p>
                     <p><span class="sum">小计：&yen;456</span><span class="count">数量：1</span></p>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="sum_pay">
-        <div>
-            应付：&yen;
-            <span class="heji">1368</span>
-        </div>
-        <div>
-            <a href="javasctipt:;">结算</a>
         </div>
     </div>
 
     <div class="nav_list">
         <a href="./index.html">首页</a>
-        <a href="./shoppingCart.html" class="active">购物车<span class="cart_info">1</span></a>
-        <a href="javasctipt:;">我的</a>
+        <a href="./shoppingCart.html">购物车<span class="cart_info">1</span></a>
+        <a href="javasctipt:;" class="active">我的</a>
     </div>
 
 </body>
 
 <script src="./lib/jQuery-1.9.1/jquery.min.js"></script>
-<script src="./lib/swiper-3.4.2/swiper-3.4.2.jquery.min.js"></script>
 <script src="./js/index.js"></script>
 <!------分------割------线------>
 </html>
