--- a/v2/addrManage.html
+++ b/v2/addrManage.html
@@ -48,7 +48,7 @@
     <div class="nav_list">
         <a href="./index.html">首页</a>
         <a href="./shoppingCart.html">购物车<span class="cart_info">1</span></a>
-        <a href="javasctipt:;" class="active">我的</a>
+        <a href="./mine.html" class="active">我的</a>
     </div>
 
 </body>
