--- a/v2/mine.html
+++ b/v2/mine.html
@@ -33,22 +33,24 @@
             <img src="./img/avatar.png" alt="avatar">
             <p class="my_name">Trump</p>
             <p>186****6066</p>
-            <a class="setting" href="javascript:;"></a>
+            <a class="setting" href="./myInfo.html"></a>
         </div>
         <div class="address">
             <span>地址管理</span>
             <span>北京市西城区广安门内大街1号602北京市西城区广安门内大街1号602北京市西城区广安门内大街1号602</span>
         </div>
         <div class="order">
-            <span>我的订单</span>
-            <span>&gt;</span>
+            <a href="./myOrder.html">
+                <span>我的订单</span>
+                <span>&gt;</span>
+            </a>
         </div>
     </div>
 
     <div class="nav_list">
         <a href="./index.html">首页</a>
         <a href="./shoppingCart.html">购物车<span class="cart_info">1</span></a>
-        <a href="javasctipt:;" class="active">我的</a>
+        <a href="./mine.html" class="active">我的</a>
     </div>
 
 </body>
