--- a/v2/myInfo.html
+++ b/v2/myInfo.html
@@ -46,14 +46,14 @@
             <span>性别</span>
             <span>男</span>
         </div>
-        <div class="approach_2nd">关于我们</div>
-        <div class="approach_1st">问题反馈</div>
+        <div class="approach_2nd"><a href="javascript:;">关于我们</a></div>
+        <div class="approach_1st"><a href="javascript:;">问题反馈</a></div>
     </div>
 
     <div class="nav_list">
         <a href="./index.html">首页</a>
         <a href="./shoppingCart.html">购物车<span class="cart_info">1</span></a>
-        <a href="javasctipt:;" class="active">我的</a>
+        <a href="./mine.html" class="active">我的</a>
     </div>
 
 </body>
