--- a/v2/myOrder.html
+++ b/v2/myOrder.html
@@ -36,7 +36,7 @@
         </div>
         <div class="order_list">
             <div class="orders">
-                <a href="javascript:;">
+                <a href="./orderDetails.html">
                     <p class="order_overview">
                         <span>拉菲传奇 LÉGENDE</span>
                         <span>共计：&yen;<span class="order_price">605</span></span>
@@ -77,7 +77,7 @@
                 </a>
             </div>
             <div class="orders">
-                <a href="javascript:;">
+                <a href="./orderDetails.html">
                     <p class="order_overview">
                         <span>拉菲传奇 LÉGENDE</span>
                         <span>共计：&yen;<span class="order_price">605</span></span>
@@ -98,7 +98,7 @@
                 </a>
             </div>
             <div class="orders">
-                <a href="javascript:;">
+                <a href="./orderDetails.html">
                     <p class="order_overview">
                         <span>拉菲传奇 LÉGENDE</span>
                         <span>共计：&yen;<span class="order_price">605</span></span>
@@ -124,7 +124,7 @@
     <div class="nav_list">
         <a href="./index.html">首页</a>
         <a href="./shoppingCart.html">购物车<span class="cart_info">1</span></a>
-        <a href="javasctipt:;" class="active">我的</a>
+        <a href="./mine.html" class="active">我的</a>
     </div>
 
 </body>
