--- a/v2/shop.html
+++ b/v2/shop.html
@@ -35,8 +35,8 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"><a href="./shopList.html"><img src="./img/shop_list_01.jpg" alt=""></a></div>
-                    <div class="swiper-slide"><a href="./shopList.html"><img src="./img/shop_list_01.jpg" alt=""></a></div>
-                    <div class="swiper-slide"><a href="./shopList.html"><img src="./img/shop_list_01.jpg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="./shopList.html"><img src="./img/detail01.jpg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="./shopList.html"><img src="./img/shop_list_product.jpg" alt=""></a></div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
@@ -123,7 +123,7 @@
     <div class="nav_list">
         <a href="./index.html" class="active">首页</a>
         <a href="./shoppingCart.html">购物车<span class="cart_info">10</span></a>
-        <a href="javasctipt:;">我的</a>
+        <a href="./mine.html">我的</a>
     </div>
 </body>
 
@@ -131,14 +131,5 @@
 <script src="./lib/swiper-3.4.2/swiper-3.4.2.jquery.min.js"></script>
 <script src="./lib/jQuery-Fly-1.0.0/jquery.fly.min.js"></script>
 <script src="./js/index.js"></script>
-<script>
-    // shop_list轮播图
-    var mySwiper = new Swiper('.swiper-container', {
-        speed: 800,
-        autoplay: 5000,
-        loop: true,
-        pagination: '.swiper-pagination',
-    })
-</script>
 <!------分------割------线------>
 </html>
