--- a/v2/shopList.html
+++ b/v2/shopList.html
@@ -116,7 +116,7 @@
     <div class="nav_list">
         <a href="./index.html" class="active">首页</a>
         <a href="./shoppingCart.html">购物车<span class="cart_info">1</span></a>
-        <a href="javasctipt:;">我的</a>
+        <a href="./mine.html">我的</a>
     </div>
 
 </body>
