--- a/v2/shoppingCart.html
+++ b/v2/shoppingCart.html
@@ -84,7 +84,7 @@
     <div class="nav_list">
         <a href="./index.html">首页</a>
         <a href="./shoppingCart.html" class="active">购物车<span class="cart_info">1</span></a>
-        <a href="javasctipt:;">我的</a>
+        <a href="./mine.html">我的</a>
     </div>
 
 </body>
