--- a/v2/shop.html
+++ b/v2/shop.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="product">
                     <a href="./details.html">
-                        <img src="./img/shop_list_product.jpg" alt="product">
+                        <img src="./img/detail01.jpg" alt="product">
                         <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                     </a>
                     <div class="product_intro">
@@ -93,7 +93,7 @@
                 </div>
                 <div class="product">
                     <a href="./details.html">
-                        <img src="./img/shop_list_product.jpg" alt="product">
+                        <img src="./img/LOGO.png" alt="product">
                         <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                     </a>
                     <div class="product_intro">
