--- a/v2/shopList.html
+++ b/v2/shopList.html
@@ -44,8 +44,6 @@
                 </a>
                 <div class="product_intro">
                     <p class="tab">
-                        <span>法国原产</span>
-                        <span>干型</span>
                     </p>
                     <p>￥<span class="price">456</span><span href="javasctipt:;" class="cart"></span></p>
                 </div>
@@ -53,7 +51,7 @@
             <div class="product">
                 <a href="./details.html">
                     <img src="./img/shop_list_product.jpg" alt="product">
-                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux波尔多传奇 Legend of Bordeaux波尔多传奇 Legend of Bordeaux波尔多传奇 Legend of Bordeaux</p>
                 </a>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
@@ -66,7 +64,7 @@
                     <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 </a>
                 <div class="product_intro">
-                    <p class="tab"><span>法国原产</span><span>干型</span></p>
+                    <p class="tab"><span>法国原产</span><span>干型</span><span>法国原产</span><span>干型</span><span>法国原产</span><span>干型</span></p>
                     <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
                 </div>
             </div>
