--- a/v2/shoppingCart.html
+++ b/v2/shoppingCart.html
@@ -48,8 +48,8 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456</span>/瓶</p>
-                    <p>小计：&yen;<span class="sum">456</span>数量：<span class="sub">&minus;</span><span class="num">2</span><span class="add">&plus;</span></p>
+                    <p>&yen;<span class="price">456.21</span>/瓶</p>
+                    <p>小计：&yen;<span class="sum">456.21</span>数量：<span class="sub">&minus;</span><span class="num">2</span><span class="add">&plus;</span></p>
                 </div>
             </div>
         </div>
@@ -60,8 +60,44 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456</span>/瓶</p>
-                    <p>小计：&yen;<span class="sum">456</span>数量：<span class="sub">&minus;</span><span class="num">3</span><span class="add">&plus;</span></p>
+                    <p>&yen;<span class="price">456.88</span>/瓶</p>
+                    <p>小计：&yen;<span class="sum">456.88</span>数量：<span class="sub">&minus;</span><span class="num">3</span><span class="add">&plus;</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="cart_item">
+            <a href="javasctipt:;" class="selection"></a>
+            <img src="./img/shop_list_product.jpg" alt="product">
+            <div>
+                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                <div class="product_intro">
+                    <p class="tab"><span>法国原产</span><span>干型</span></p>
+                    <p>&yen;<span class="price">456.88</span>/瓶</p>
+                    <p>小计：&yen;<span class="sum">456.88</span>数量：<span class="sub">&minus;</span><span class="num">3</span><span class="add">&plus;</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="cart_item">
+            <a href="javasctipt:;" class="selection"></a>
+            <img src="./img/shop_list_product.jpg" alt="product">
+            <div>
+                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                <div class="product_intro">
+                    <p class="tab"><span>法国原产</span><span>干型</span></p>
+                    <p>&yen;<span class="price">456.64</span>/瓶</p>
+                    <p>小计：&yen;<span class="sum">456.64</span>数量：<span class="sub">&minus;</span><span class="num">3</span><span class="add">&plus;</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="cart_item">
+            <a href="javasctipt:;" class="selection"></a>
+            <img src="./img/shop_list_product.jpg" alt="product">
+            <div>
+                <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                <div class="product_intro">
+                    <p class="tab"><span>法国原产</span><span>干型</span></p>
+                    <p>&yen;<span class="price">456.64</span>/瓶</p>
+                    <p>小计：&yen;<span class="sum">456.64</span>数量：<span class="sub">&minus;</span><span class="num">3</span><span class="add">&plus;</span></p>
                 </div>
             </div>
         </div>
