--- a/v2/会员中心（有身份）.html
+++ b/v2/会员中心（有身份）.html
@@ -14,7 +14,7 @@
     <meta content="white" name="apple-mobile-web-app-status-bar-style">
     <!-- 优先使用 IE 最新版本和 Chrome -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>我的</title>
+    <title>会员中心</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script src="./js/response.js"></script>
 
@@ -25,10 +25,10 @@
 
     <!-- 头部导航 -->
     <div class="nav">
-        <p>我的</p>
+        <p>会员中心</p>
     </div>
 
-    <div class="my_info">
+    <div class="member_center">
         <div class="information">
             <!-- 
             e.n 会员头像的背景圈
@@ -37,27 +37,15 @@
                 钻石会员Class：zs_member;
             -->
             <div class="member zs_member"><img src="./img/avatar.png" alt="avatar"></div>
-            <!-- END -->
             <p class="my_name">Trump</p>
-            <p>186****6066</p>
-            <a class="setting" href="./myInfo.html"></a>
+            <p>白银会员</p>
         </div>
-        <div class="order">
-            <a href="./级别选择.html">
-                <span>会员中心</span>
-                <span>&gt;</span>
-            </a>
+        <div class="member_right">
+            <p>会员权益即将开放</p>
+            <p>敬请期待</p>
         </div>
-        <div class="order">
-            <a href="./myOrder.html">
-                <span>我的订单</span>
-                <span>&gt;</span>
-            </a>
-        </div>
-        <div class="address">
-            <span>地址管理</span>
-            <span>北京市西城区广安门内大街1号602北京市西城区广安门内大街1号602北京市西城区广安门内大街1号602</span>
-        </div>
+        <div class="approach_2nd"><a href="javascript:;">会员条例<span>&gt;</span></a></div>
+        <div class="approach_1st"><a href="javascript:;">问题反馈<span>&gt;</span></a></div>
     </div>
 
     <div class="nav_list">
