--- a/v2/会员中心（有身份）.html
+++ b/v2/会员中心（有身份）.html
@@ -44,6 +44,9 @@
             <p>会员权益即将开放</p>
             <p>敬请期待</p>
         </div>
+        <div class="upgrade_member">
+            <a href="./级别选择.html">升级会员</a>
+        </div>
         <div class="approach_2nd"><a href="javascript:;">会员条例<span>&gt;</span></a></div>
         <div class="approach_1st"><a href="javascript:;">问题反馈<span>&gt;</span></a></div>
     </div>
