fix result page's bugs

--- a/v2/搜索结果.html
+++ b/v2/搜索结果.html
@@ -63,6 +63,32 @@
                     <p>￥<span class="price">456</span><span href="javasctipt:;" class="cart"></span></p>
                 </div>
             </div>
+            <div class="product">
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                </a>
+                <div class="product_intro">
+                    <p class="tab">
+                        <span>法国原产</span>
+                        <span>干型</span>
+                    </p>
+                    <p>￥<span class="price">456</span><span href="javasctipt:;" class="cart"></span></p>
+                </div>
+            </div>
+            <div class="product">
+                <a href="./details.html">
+                    <img src="./img/shop_list_product.jpg" alt="product">
+                    <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
+                </a>
+                <div class="product_intro">
+                    <p class="tab">
+                        <span>法国原产</span>
+                        <span>干型</span>
+                    </p>
+                    <p>￥<span class="price">456</span><span href="javasctipt:;" class="cart"></span></p>
+                </div>
+            </div>
         </div>
     </div>
 
