--- a/v2/shoppingCart.html
+++ b/v2/shoppingCart.html
@@ -36,8 +36,16 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456</span>/瓶</p>
-                    <p>小计：&yen;<span class="sum">456</span>数量：<span class="sub">&minus;</span><span class="num">1</span><span class="add">&plus;</span></p>
+                    <p>
+                        <span>&yen;
+                            <span class="price">456</span>/瓶
+                        </span>
+                        <span class="count_price">数量：
+                            <span class="sub">&minus;</span>
+                            <span class="num">3</span>
+                            <span class="add">&plus;</span>
+                        </span></p>
+                    <p>小计：&yen;<span class="sum">456</span></p>
                 </div>
             </div>
         </div>
@@ -48,8 +56,16 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456.21</span>/瓶</p>
-                    <p>小计：&yen;<span class="sum">456.21</span>数量：<span class="sub">&minus;</span><span class="num">2</span><span class="add">&plus;</span></p>
+                    <p>
+                        <span>&yen;
+                            <span class="price">456.21</span>/瓶
+                        </span>
+                        <span class="count_price">数量：
+                            <span class="sub">&minus;</span>
+                            <span class="num">3</span>
+                            <span class="add">&plus;</span>
+                        </span></p>
+                    <p>小计：&yen;<span class="sum">456.21</span></p>
                 </div>
             </div>
         </div>
@@ -60,8 +76,17 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456.88</span>/瓶</p>
-                    <p>小计：&yen;<span class="sum">456.88</span>数量：<span class="sub">&minus;</span><span class="num">3</span><span class="add">&plus;</span></p>
+                    <p>
+                        <span>&yen;
+                            <span class="price">456.88</span>/瓶
+                        </span>
+                        <span class="count_price">数量：
+                            <span class="sub">&minus;</span>
+                            <span class="num">3</span>
+                            <span class="add">&plus;</span>
+                        </span>
+                    </p>
+                    <p>小计：&yen;<span class="sum">456.88</span></p>
                 </div>
             </div>
         </div>
@@ -72,8 +97,12 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456.88</span>/瓶</p>
-                    <p>小计：&yen;<span class="sum">456.88</span>数量：<span class="sub">&minus;</span><span class="num">3</span><span class="add">&plus;</span></p>
+                    <p><span>&yen;<span class="price">456.88</span>/瓶</span><span class="count_price">数量：
+                            <span class="sub">&minus;</span>
+                            <span class="num">3</span>
+                            <span class="add">&plus;</span>
+                        </span></p>
+                    <p>小计：&yen;<span class="sum">456.88</span></p>
                 </div>
             </div>
         </div>
@@ -84,8 +113,12 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456.64</span>/瓶</p>
-                    <p>小计：&yen;<span class="sum">456.64</span>数量：<span class="sub">&minus;</span><span class="num">3</span><span class="add">&plus;</span></p>
+                    <p><span>&yen;<span class="price">456.64</span>/瓶</span><span class="count_price">数量：
+                            <span class="sub">&minus;</span>
+                            <span class="num">3</span>
+                            <span class="add">&plus;</span>
+                        </span></p>
+                    <p>小计：&yen;<span class="sum">456.64</span></p>
                 </div>
             </div>
         </div>
@@ -96,8 +129,12 @@
                 <p class="product_name">波尔多传奇 Legend of Bordeaux</p>
                 <div class="product_intro">
                     <p class="tab"><span>法国原产</span><span>干型</span></p>
-                    <p>&yen;<span class="price">456.64</span>/瓶</p>
-                    <p>小计：&yen;<span class="sum">456.64</span>数量：<span class="sub">&minus;</span><span class="num">3</span><span class="add">&plus;</span></p>
+                    <p><span>&yen;<span class="price">456.64</span>/瓶</span><span class="count_price">数量：
+                            <span class="sub">&minus;</span>
+                            <span class="num">3</span>
+                            <span class="add">&plus;</span>
+                        </span></p>
+                    <p>小计：&yen;<span class="sum">456.64</span></p>
                 </div>
             </div>
         </div>
@@ -110,7 +147,7 @@
         </div>
         <div>
             合计：&yen;
-            <span class="heji">0</span>
+            <span class="heji">0.00</span>
         </div>
         <div>
             <a href="./payment.html">去结算</a>
@@ -126,6 +163,7 @@
 </body>
 
 <script src="./lib/jQuery-1.9.1/jquery.min.js"></script>
+<script src="./js/countUp.min.js"></script>
 <script src="./js/index.js"></script>
 <!------分------割------线------>
 </html>
