--- a/v2/details.html
+++ b/v2/details.html
@@ -43,10 +43,24 @@
         <div class="product_intro">
             <p>拉菲（LAFITE）传奇波尔多干红葡萄酒 750ml</p>
             <p class="tab"><span>法国原产</span><span>干型</span></p>
-            <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart"></a></p>
+            <p>￥<span class="price">456</span><a href="javasctipt:;" class="cart">加入购物车</a></p>
         </div>
+        <p class="order_classify"><span>已选：*****ml 单瓶装</span><span>&gt;</span></p>
         <p class="intro_words">百年拉菲 荣耀传承，精品红酒，至臻之选。</p>
         <img src="./img/detail02.jpg" alt="details">
+    </div>
+
+    <div class="classify_choice_mask">
+        <div class="classify_choice">
+            <div class="classify_content">
+                <img src="./img/shop_list_product.jpg" alt="img">
+                <p>拉菲传奇 LÉGENDE</p>
+                <a href="javasctipt:;">规格1</a>
+                <a href="javasctipt:;">规格1</a>
+                <a href="javasctipt:;">规格1</a>
+                <span></span>
+            </div>  
+        </div>
     </div>
 
     <div class="nav_list">
